# lance-duckdb

./: .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  extension_config.cmake  geo-design-by-codebuddy-claude-4.6-Opus.md  geo.md
.github/workflows/: Build.yml  CodeQuality.yml  Distribution.yml  codex-update-lance-dependency.yml  lance-release-timer.yml
benches/laion_1m/: README.md
benches/laion_1m/scripts/: download_source_parquet.sh  run_search_bench.py  run_search_bench.sh
benches/laion_1m/sql/: 10_materialize_lz4_parquet.sql  20_build_duckdb_indexed.sql  30_build_lance_v22.sql  40_bench_parquet_direct.sql  41_bench_duckdb_indexed.sql  42_bench_lance.sql  50_verify_duckdb_indexed.sql  51_verify_lance.sql
benches/laion_1m/sql/workloads/duckdb_indexed/: _init.sql  blob_read.sql  fts.sql  hybrid.sql  vector_exact.sql  vector_indexed.sql
benches/laion_1m/sql/workloads/lance/: _init.sql  blob_read.sql  fts.sql  hybrid.sql  vector_exact.sql  vector_indexed.sql
benches/laion_1m/sql/workloads/parquet/: _init.sql  blob_read.sql  fts.sql  hybrid.sql  vector_exact.sql  vector_indexed.sql
ci/: check_lance_release.py
docs/: cloud.md  cpp_guidelines.md  rest.md  rust_guidelines.md  sql.md
rust/: datafusion_stream.rs  error.rs  exec_ir.rs  expr_ir.rs  filter_ir.rs  lib.rs  scanner.rs
rust/ffi/: dataset.rs  dir_namespace.rs  exec.rs  geo.rs  index.rs  knn.rs  merge.rs  mod.rs  namespace.rs  projection.rs  scan.rs  schema_evolution.rs  search.rs  session.rs  take.rs  types.rs  update.rs  util.rs  write.rs
src/: lance_arrow_compat.cpp  lance_common.cpp  lance_dataset_cache.cpp  lance_delete.cpp  lance_exec_ir.cpp  lance_expr_ir.cpp  lance_extension.cpp  lance_filter_ir.cpp  lance_geo_scan.cpp  lance_index.cpp  lance_insert.cpp  lance_logical_exec.cpp  lance_maintenance.cpp  lance_merge.cpp  lance_metadata.cpp  lance_replacement.cpp  lance_resolver.cpp  lance_scan.cpp  lance_search.cpp  lance_secrets.cpp  lance_session_state.cpp  lance_storage.cpp  lance_truncate.cpp  lance_update.cpp  lance_write.cpp
src/include/: lance_arrow_compat.hpp  lance_common.hpp  lance_dataset_cache.hpp  lance_exec_ir.hpp  lance_expr_ir.hpp  lance_ffi.hpp  lance_filter_ir.hpp  lance_geo_scan.hpp  lance_geo_types.hpp  lance_insert.hpp  lance_logical_exec.hpp  lance_merge.hpp  lance_resolver.hpp  lance_scan_bind_data.hpp  lance_secrets.hpp  lance_session_state.hpp  lance_table_entry.hpp
test/data/float16_fixture.lance/_transactions/: 0-c57b8664-2ed8-432b-a457-1998fc2bf1ed.txn
test/data/issue184_list_float.lance/_transactions/: 0-5ae7ab90-86eb-4792-8161-2dc1d5f6abfc.txn
test/scripts/: gen_float16_fixture.py
test/sql/: README.md  alter_table_schema_evolution.test  bench_bigann_tiny.test  dataset_cache_precise_invalidation.test  distinct_from_pushdown.test  dml_alter_table_schema_evolution.test  dml_alter_table_vector_schema_evolution.test  dml_copy_to.test  dml_delete.test  dml_drop_table.test  dml_insert.test  dml_merge.test  dml_merge_returning.test  dml_merge_transaction.test  dml_truncate.test  dml_update.test  exec_pushdown_cast_group_by.test  exec_pushdown_p0.test  exec_pushdown_tpch_q1_explain.test  exec_pushdown_tpch_q6.test  float16_widening.test  index_ddl.test  lance.test  lance_rowid_in.test  lance_rowid_native.test  lance_spatial_geometry.test  lance_spatial_join.test  lance_spatial_rtree.test  like_pushdown.test  maintenance_auto_cleanup.test  maintenance_concurrency.test  maintenance_internal_metrics.test  maintenance_options.test  maintenance_smoke.test  maintenance_sql_surface.test  namespace_attach.test  namespace_bad_table_resilience.test  namespace_create_table.test  namespace_dynamic_discovery.test  namespace_rest_attach.test  (+27 more)
tests/: test_rtree_e2e.sh
