[package]
name = "lance_duckdb_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lance_duckdb_ffi"
crate-type = ["staticlib"]
path = "rust/lib.rs"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]

# Lance and Arrow dependencies - using compatible versions
lance = { version = "2.0.1", default-features = false, features = ["aws", "azure", "gcp", "oss", "huggingface"] }
lance-arrow = "2.0.1"
lance-core = "2.0.1"
lance-index = "2.0.1"
lance-linalg = "2.0.1"
lance-namespace = "2.0.1"
lance-namespace-impls = { version = "2.0.1", features = ["rest"] }
lance-table = "2.0.1"

arrow = { version = "57.0.0", features = ["ffi"] }
arrow-array = "57.0.0"
arrow-schema = "57.0.0"

datafusion = "51.0.0"
datafusion-common = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-functions = "51.0.0"
datafusion-sql = "51.0.0"

anyhow = "1.0"
async-trait = "0.1"
bzip2-sys = { version = "0.1.13", features = ["static"] }
chrono = "0.4"
futures = "0.3"
roaring = "0.10.12"
serde_json = "1.0"
snafu = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
